<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Tanie Chlanie</string>
    <string name="list">Baza alkoholi</string>
    <string name="preferences">Ustawienia</string>
    <string name="about">O aplikacji</string>
    <string name="about_help">Pomoc</string>
    <string name="details">Szczegóły</string>
    <string name="request">Zgłoś nową pozycję!</string>
    <string name="request_cat">Wybierz kategorię:</string>
    <string name="request_shop">Wskaż dostępność:</string>
    <string name="request_summary">Podsumowanie</string>
    <string name="profile_page">Profil</string>
    <string name="favourite_page">Ulubione</string>
    <string name="modpanel">Panel moderatora</string>
    <string name="modpanel_newbooze">Nowe alkohole</string>
    <string name="modpanel_details">Szczegóły</string>
    <string name="modpanel_pricechanges">Zmiany cen</string>
    <string name="modpanel_reports">Zgłoszenia</string>
    <string name="filters">Filtry</string>
    <string name="pick_categories">Wybierz kategorie</string>
    <string name="start">Zaczynamy!</string>
    <string name="welcome_text">
        Witaj w aplikacji <b>TanieChlanie</b>! \n
        Tutaj obliczysz, jak w najbardziej efektywny sposób spędzić piątkową noc.
        Aplikacja jest na ten moment w fazie testów. Będzie poprawiana i aktualizowana na bieżąco.
    </string>
    <string name="rules_welcome">Oświadczam że mam ukończone 18 lat i zapoznałem się z treścią
        <a href="https://taniechlanie.ml/regulamin">regulaminu</a>
    </string>
    <string name="warning_welcome">Zaakceptuj regulamin aby kontynuować</string>
    <string name="wine">Butelka wina, obok dwa kieliszki</string>
    <string name="avatar">Awatar użytkownika</string>
    <string name="details_descriptionDisclaimer">Produkt nie posiada opisu.\nFunkcja dodawania opisów już wkrótce!</string>
    <string name="pricetag">Cena:</string>
    <string name="mR">mR:</string>
    <string name="volume">Objętość:</string>
    <string name="voltage">%Vol.:</string>
    <string name="details_description">Opis</string>
    <string name="details_availability">Sprawdź dostępność</string>
    <string name="details_reviews">Najpopularniejsze recenzje</string>
    <string name="details_allReviews">Zobacz wszystkie recenzje</string>
    <string name="details_rating">Oceny</string>
    <string name="details_rate">Dodaj recenzję</string>
    <string name="details_count">%1$S ocen</string>
    <string name="details_reviewhint">Piwo? Piwo. Piwo piwo piwo....</string>
    <string name="details_ratingError">Ocena musi wynosić przynajmniej 0.5 gwiazdki!</string>
    <string name="details_editReview">Zmień recenzję</string>
    <string name="details_report">Zgłoś</string>
    <string name="details_favtoast">Dodano do ulubionych</string>
    <string name="details_favremove">Usunięto z ulubionych</string>
    <string name="details_addprice">Dodaj cenę</string>
    <string name="details_editprice">Zgłoś nową cenę</string>
    <string name="details_availabilitydisclaimer">UWAGA: Ceny będące wynikiem czasowej promocji
        należy dodawać za pomocą zakładki zgłoś promocję!</string>
    <string name="avsubmit_header">Dodaj miejsce występowania!</string>
    <string name="avsubmit_shopmissing">Sklep spoza listy</string>
    <string name="avsubmit_shoppresent">Wybierz sklep z listy</string>
    <string name="avsubmit_edit">Zgłoś cenę!</string>
    <string name="report_booze_header">Zgłoś przedmiot</string>
    <string name="report_review_header">Zgłoś recenzję</string>
    <string name="report_reason">Powód zgłoszenia</string>
    <string name="report_details">Dodatkowe informacje</string>
    <string name="report_sent">Dziękujemy za zgłoszenie!</string>
    <string-array name="report_booze">
        <item>Spam</item>
        <item>Zdjęcie przedstawia inny produkt</item>
        <item>Błąd w parametrach</item>
        <item>Inny powód</item>
    </string-array>
    <string-array name="report_review">
        <item>Spam</item>
        <item>Recenzja zawiera obraźliwą wypowiedź</item>
        <item>Inny powód</item>
    </string-array>
    <string name="pricerange">Zakres cen</string>
    <string name="favourite_notloggedin">Zaloguj się i zacznij dodawać pozycje do ulubionych!</string>
    <string name="favourite_empty">Nie dodałeś jeszcze nic do ulubionych.\nMoże twój idealny smak dopiero czeka na odkrycie?</string>
    <string name="about_author">by Redc4ke</string>
    <string-array name="about_header">
        <item>Autor</item>
        <item>Zgłoś błąd</item>
        <item>Autorzy ikon</item>
        <item>Regulamin</item>
        <item>Pomoc</item>
    </string-array>
    <string-array name="about_description">
        <item>Informacje o autorze aplikacji</item>
        <item>Zauważyłeś błąd? Zgłoś go tutaj!</item>
        <item>Twócy ikon użytych w programie</item>
        <item>Regulamin korzystania z aplikacji</item>
        <item>Objaśnienie działania aplikacji</item>
    </string-array>
    <string name="faq_help">Często zadawane pytania</string>
    <string name="mail_help">
        Nie znalazłeś odpowiedzi?\nNapisz do nas na <b>support@taniechlanie.ml</b>
    </string>
    <string name="header1">Nie znalazłeś czegoś w bazie?</string>
    <string name="header2">Dodaj procenty!</string>
    <string name="name_req">Nazwa</string>
    <string name="price_req">Cena</string>
    <string name="price_req_suffix">\u00A0zł</string>
    <string name="volume_req">Objętość</string>
    <string name="volume_req_suffix">\u00A0ml</string>
    <string name="voltage_req">Obj. alkoholu</string>
    <string name="voltage_req_suffix">\u00A0%</string>
    <string name="image_req">Dodaj zdjęcie</string>
    <string name="image_req_desc">Brak</string>
    <string name="category_req">Dodaj kategorię</string>
    <string name="disclaimer_req">
        *Przekazując zdjęcie oświadczasz że posiadasz do niego pełne prawa autorskie
        oraz uprawniasz autora aplikacji do publikowania, edycji oraz przechowywania go
        na jej potrzeby.
    </string>
    <string name="request_basecategory">Kategoria podstawowa</string>
    <string name="request_additionalcat">Kategoria dodatkowa</string>
    <string name="request_missingcategory">Brakuje kategorii?</string>
    <string name="request_namehelper">Wprowadź nazwę alkoholu</string>
    <string name="request_addshop">Wybierz sklep</string>
    <string name="request_shopmissing">Sklepu nie ma na liście?</string>
    <string name="request_shopmissingbt">Dodaj nowy</string>
    <string name="request_returntospinner">Wróć do listy sklepów</string>
    <string name="request_shopbt">Sklep: </string>
    <string name="request_repeatingcats">Kategorie nie mogą się powtarzać!</string>
    <string name="request_success">Twoje zgłoszenie zostało przesłane i oczekuje na zatwardzenie moderatora!</string>
    <string name="name_summary">Nazwa:</string>
    <string name="price_summary">Cena:</string>
    <string name="volume_summary">Objętość:</string>
    <string name="voltage_summary">Obj. alk.:</string>
    <string name="categories_summary">Kategorie:</string>
    <string name="shops_summary">Dostępność:</string>
    <string name="info_summary">
        Wprowadzone dane zostaną przekazane do weryfikacji. Stay tuned!
    </string>
    <string name="success_summary">
        Brawo! Twoje zgłoszenie zostało dodane!
        \nDziękujemy za twój wkład w rozwój aplikacji!
    </string>
    <string name="failure_summary">
        Coś poszło nie tak! Sprawdź swoje połączenie z internetem.
        \nJeśli błąd się powtarza, powiadom nas o tym!
    </string>
    <string name="info_storageheader">Prośba o uprawnienia</string>
    <string name="info_storagecontent">Za chwilę poprosimy cię o uprawnienia do odczytu zapisanych
        na twojej karcie SD plików. Zgoda jest całkowicie dobrowolna, jednak bez niej nie będziesz
        w stanie dodać swojego zdjęcia do formularza.</string>
    <string name="login_fb">Facebook</string>
    <string name="login_mail">E-mail</string>
    <string name="login_header">Zaloguj /\nzarejestruj</string>
    <string name="profile_submits">Dodanych pozycji: %1$S</string>
    <string name="profile_reviews">Recenzji: %1$S</string>
    <string name="profile_accmanagement">Zarządzanie kontem</string>
    <string-array name="profile_menu">
        <item>Zarządzanie kontem</item>
        <item>Recenzje</item>
        <item>Dodane alkohole</item>
    </string-array>
    <string name="profile_manageHeader">Dostosuj informacje profilowe</string>
    <string-array name="profile_manageMenu">
        <item>Nazwa wyświetlana:</item>
        <item>Adres e-mail:</item>
        <item>Zmień hasło</item>
        <item>Usuń konto</item>
    </string-array>
    <string name="profile_modpanel">Panel moderatora</string>
    <string name="profile_editDisplayName">Zmień nazwę konta</string>
    <string name="profile_editEmail">Zmień adres e-mail</string>
    <string name="profile_editPassword">Zmień hasło</string>
    <string name="profile_confirm">Wymagane potwierdzenie</string>
    <string name="profile_hint_newpwd">Nowe hasło</string>
    <string name="profile_hint_currentpwd">Podaj obecne hasło</string>
    <string name="profile_your_reviews">Twoje recenzje</string>
    <string name="newBooze">Nowy alkohol</string>
    <string name="your_requests">Twoje alkohole</string>
    <string name="state">Status</string>
    <string name="state_pending">Oczekuje</string>
    <string name="state_accepted">Zaakceptowano</string>
    <string name="state_declined">Odrzucono</string>
    <string name="verification_date">Data weryfikacji</string>
    <string-array name="mod_actionlist">
        <item>Nowe alkohole</item>
        <item>Zmiany w cenach</item>
        <item>Zgłoszone</item>
    </string-array>
    <string name="declination_header">Wybierz powód\nodrzucenia wniosku</string>
    <string-array name="decliantion_reasons">
        <item>Spam</item>
        <item>Niewłaściwe zdjęcie</item>
        <item>Niewłaściwe informacje</item>
        <item>Pozycja została już dodana przez kogoś innego</item>
        <item>Błąd w nazwie</item>
    </string-array>
    <string name="pending">Oczekuje na zatwierdzenie</string>
    <string name="approved">Zaakceptowano</string>
    <string name="declined">Odrzucono</string>
    <string name="request_accepted">Zgłoszenie zatwierdzone</string>
    <string name="price_old">Stara cena</string>
    <string name="price_new">Nowa cena</string>
    <string name="chose_action">Wybierz akcję</string>
    <string-array name="report_booze_actions">
        <item>Usuń przedmiot</item>
        <item>Usuń zdjęcie</item>
        <item>Zmień parametry</item>
        <item>Dodaj kategorię</item>
        <item>Usuń kategorię</item>
        <item>Zmień podstawową kategorię</item>
        <item>Prześlij do administratora</item>
        <item>Zablokuj zgłaszającego za spam</item>
    </string-array>
    <string-array name="report_review_actions">
        <item>Usuń recenzję</item>
        <item>Usuń i zablokuj użytkownika</item>
        <item>Zablokuj zgłaszającego za spam</item>
    </string-array>
    <string name="add_category">Dodaj kategorię</string>
    <string name="remove_category">Usuń kategorię</string>
    <string name="change_major_category">Zmień kategorię podstawową</string>
    <string name="chose_category">Wybierz kategorię</string>
    <string name="change_data">Zmień parametry</string>
    <string name="romper_unit">Jednostka opłacalności</string>
    <string name="row_alcohol_details_transition_name">row_alcohol_details_transition</string>
    <string name="error">Błąd: %1$S</string>
    <string name="err_zeroValue">Nie może być 0</string>
    <string name="err_over100p">Maks. 100%</string>
    <string name="err_no_connection">Błąd - brak połączenia z inernetem.</string>
    <string name="err_emptyField">Nie może być puste!</string>
</resources>