<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/welcome_layout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:padding="16dp">

    <ImageView
        android:id="@+id/welcome_image"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:contentDescription="@string/wine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/wine1" />

    <TextView
        android:id="@+id/welcome_textView"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/open_sans_light"
        android:gravity="center_horizontal"
        android:text="@string/welcome_text"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome_image" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.65"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome_textView">

        <CheckBox
            android:id="@+id/welcome_rulesCHB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/open_sans_light"
            android:textAlignment="viewStart"
            android:textColor="@color/grey_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/welcome_rulesTV"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_weight="1"
            android:fontFamily="@font/open_sans_light"
            android:gravity="start"
            android:text="@string/rules_welcome"
            android:textColor="@color/grey_text"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/welcome_rulesCHB"
            app:layout_constraintStart_toStartOf="@+id/welcome_rulesCHB"
            app:layout_constraintTop_toTopOf="@+id/welcome_rulesCHB" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/start_BT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

    <TextView
        android:id="@+id/welcome_warningTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/open_sans_light"
        android:text="@string/warning_welcome"
        android:textColor="@color/error"
        android:textSize="12sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/start_BT"
        tools:text="Zaakceptuj regulamin aby kontynuować" />

</androidx.constraintlayout.widget.ConstraintLayout>