<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00FFFFFF"
    android:id="@+id/fragment_request_container">

    <androidx.cardview.widget.CardView
        android:id="@+id/price_request"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        app:cardCornerRadius="20dp"
        tools:context="com.redc4ke.taniechlanie.ui.request.RequestFragment">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipChildren="false"
            android:clipToPadding="false">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/open_sans_light"
                android:text="@string/header1"
                android:textColor="@color/black"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans_light"
                android:text="@string/header2"
                android:textColor="@color/red_heavy"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout"
                style="@style/Theme.taniechlanie.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:hint="@string/name_req"
                app:counterEnabled="true"
                app:counterMaxLength="30"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/name_ET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone"
                    android:maxLength="30"
                    android:singleLine="true"
                    android:textSize="18sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout2"
                style="@style/Theme.taniechlanie.TextInputLayout"
                android:layout_width="155dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="8dp"
                android:hint="@string/price_req"
                app:counterEnabled="true"
                app:counterMaxLength="7"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
                app:suffixText="@string/price_req_suffix"
                app:suffixTextAppearance="@style/Theme.taniechlanie.Suffix">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/price1_ET"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:digits="1234567890.,"
                    android:imeOptions="actionDone"
                    android:inputType="numberDecimal"
                    android:maxLength="7"
                    android:singleLine="true"
                    android:textAlignment="textEnd"
                    android:textSize="18sp"
                    app:layout_constraintTop_toBottomOf="@+id/textView5" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout3"
                style="@style/Theme.taniechlanie.TextInputLayout"
                android:layout_width="155dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="20dp"
                android:hint="@string/volume_req"
                app:counterEnabled="true"
                app:counterMaxLength="5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
                app:suffixText="@string/volume_req_suffix"
                app:suffixTextAppearance="@style/Theme.taniechlanie.Suffix">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/volume_ET"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:digits="1234567890"
                    android:imeOptions="actionDone"
                    android:inputType="numberDecimal"
                    android:maxLength="5"
                    android:singleLine="true"
                    android:textAlignment="textEnd"
                    android:textSize="18sp"
                    app:layout_constraintTop_toBottomOf="@+id/textView5" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout4"
                style="@style/Theme.taniechlanie.TextInputLayout"
                android:layout_width="155dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="8dp"
                android:hint="@string/voltage_req"
                app:counterEnabled="true"
                app:counterMaxLength="5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout2"
                app:suffixText="@string/voltage_req_suffix"
                app:suffixTextAppearance="@style/Theme.taniechlanie.Suffix">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/voltage_ET"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:digits="1234567890.,"
                    android:imeOptions="actionDone"
                    android:inputType="numberDecimal"
                    android:maxLength="5"
                    android:singleLine="true"
                    android:textAlignment="textEnd"
                    android:textSize="18sp"
                    app:layout_constraintTop_toBottomOf="@+id/textView5" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/image_req_BT"
                style="@style/Theme.taniechlanie.OutlinedBT"
                android:layout_width="155dp"
                android:layout_height="68dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="20dp"
                android:elevation="0dp"
                android:text="@string/image_req"
                app:icon="@drawable/ic_baseline_image_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout3" />

            <TextView
                android:id="@+id/image_req_desc"
                android:layout_width="135dp"
                android:layout_height="15dp"
                android:layout_marginTop="62dp"
                android:layout_marginEnd="10dp"
                android:text="@string/image_req_desc"
                android:textAlignment="textEnd"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="@+id/image_req_BT"
                app:layout_constraintTop_toTopOf="@+id/image_req_BT"
                tools:text="Brak" />

            <FrameLayout
                android:id="@+id/cat_FL1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout4"
                android:clipChildren="false"
                android:clipToPadding="false">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/cat_req_BT1"
                    style="@style/Theme.taniechlanie.TextBT"
                    android:layout_width="155dp"
                    android:layout_height="42dp"
                    android:clickable="false"
                    android:focusable="false"
                    android:text="@string/category_req" />
            </FrameLayout>

            <FrameLayout
                android:id="@+id/cat_FL2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="22dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/image_req_desc"
                android:clipChildren="false"
                android:clipToPadding="false">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/cat_req_BT2"
                    style="@style/Theme.taniechlanie.TextBT"
                    android:layout_width="155dp"
                    android:layout_height="42dp"
                    android:clickable="false"
                    android:focusable="false"
                    android:text="@string/category_req" />
            </FrameLayout>

            <FrameLayout
                android:id="@+id/cat_FL3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cat_FL1"
                android:clipChildren="false"
                android:clipToPadding="false">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/cat_req_BT3"
                    style="@style/Theme.taniechlanie.TextBT"
                    android:layout_width="155dp"
                    android:layout_height="42dp"
                    android:text="@string/category_req"
                    tools:layout_editor_absoluteX="29dp"
                    android:clickable="false"
                    android:focusable="false"/>

            </FrameLayout>

            <FrameLayout
                android:id="@+id/cat_FL4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="22dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cat_FL2"
                android:clipChildren="false"
                android:clipToPadding="false">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/cat_req_BT4"
                    style="@style/Theme.taniechlanie.TextBT"
                    android:layout_width="155dp"
                    android:layout_height="42dp"
                    android:clickable="false"
                    android:focusable="false"
                    android:text="@string/category_req"
                    app:layout_constraintEnd_toEndOf="parent" />

            </FrameLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</FrameLayout>